feat(invite_email): added email invite template with i18n

--- a/templates/user_invite_mvp/index.html
+++ b/templates/user_invite_mvp/index.html
@@ -116,7 +116,7 @@
 					<td>
 						<p style="font-size: 16px; line-height: 1.6">
 							<a
-								href="hex.santiagosaavedra.com.co/auth/signup?method=invite&user=hash"
+								href="https://hex.santiagosaavedra.com.co/auth/signup?method=invite&user=hash"
 								style="
 									text-decoration: none;
 									background-color: #cc69f8;
