--- a/templates/user_invite_mvp/index.html
+++ b/templates/user_invite_mvp/index.html
@@ -62,7 +62,7 @@
             <tr style="text-align: center">
                 <td>
                     <p style="font-size: 16px; line-height: 1.6;">
-                        <a href="https://hex.santiagosaavedra.com.co/auth/signup?method=invite&user=hash" style="text-decoration: none; background-color: #cc69f8; padding: 8px 16px; border-radius: 8px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); width: 30%; color: #0d0830;">{{.JoinUs}}</a>
+                        <a href="https://hex.santiagosaavedra.com.co/auth/signup?method=invite&invite-id={{.InviteId}}" style="text-decoration: none; background-color: #cc69f8; padding: 8px 16px; border-radius: 8px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); width: 30%; color: #0d0830;">{{.JoinUs}}</a>
                     </p>
                 </td>
             </tr>
